--- a/acceuil.html
+++ b/acceuil.html
@@ -13,13 +13,12 @@ and open the template in the editor.
     </head>
     
     <body>
-        <section class="menufond">
-            <a href="profil.html"><h1> Profil </h1></a>
-            <a href="ingredients.html"><h1>Gestion des  ingrédients</h1></a>
-            <a href="stocks.html"><h1>Gestion des stocks</h1></a>
-            <a href="recettes.html"><h1>Gestion de  recettes</h1></a>
-            <a href="batchs.html"><h1>Gestion de  batchs</h1></a>
-            <a href="aide.html"><h1>Comment utiliser l'application</h1></a>
-        </section>
+        <section> <a href="profil.html"><h1> Profil </h1></a> </section>
+        <section> <a href="ingredients.html"><h1>Gestion des  ingrédients</h1></a> </section>
+        <section> <a href="stocks.html"><h1>Gestion des stocks</h1></a> </section>
+        <section> <a href="recettes.html"><h1>Gestion de  recettes</h1></a> </section>
+        <section> <a href="batchs.html"><h1>Gestion de  batchs</h1></a> </section>
+        <section> <a href="aide.html"><h1>Comment utiliser l'application</h1></a> </section>
+        
     </body>
 </html>
