--- a/stocks.html
+++ b/stocks.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Stocks</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel= "stylesheet" href="style.css">        
@@ -26,9 +26,7 @@ and open the template in the editor.
         </header>
         
         
-        <sections class="menufond">
-            <a href="ajout_stock.html"><h1> Ajouter au stock </h1></a> <br/>
-            <a href="liste_stock.html"><h1>Modifier un élément du stock</h1></a> <br/>
-        </sections>        
+        <section> <a href="ajout_stock.html"><h1> Ajouter au stock </h1></a> </section>
+        <section> <a href="liste_stock.html"><h1>Modifier un élément du stock</h1></a> </section>        
     </body>
 </html>
