--- a/acceuil.html
+++ b/acceuil.html
@@ -17,19 +17,19 @@ and open the template in the editor.
         <div class="container">           
             <div class ="row my-3">
                 <div class="col-xs-12 col-md-6"> 
-                    <div class="boxitems"> <a href="ingredients.html"> <h1> Gestion des  ingrédients </h1> </a> </div>
+                    <div class="boxitems"> <a href="ingredients.html"> <h1> Ingrédients </h1> </a> </div>
                 </div>
                 <div class="col-xs-12 col-md-6"> 
-                    <div class="boxitems"> <a href="stocks.html"><h1>Gestion des stocks</h1></a> </div>
+                    <div class="boxitems"> <a href="stocks.html"><h1>Stocks</h1></a> </div>
                 </div>
             </div>
                         
             <div class ="row my-3">
                 <div class="col-xs-12 col-md-6"> 
-                    <div class="boxitems"> <a href="recettes.html"><h1>Gestion de  recettes</h1></a> </div>
+                    <div class="boxitems"> <a href="recettes.html"><h1>Recettes</h1></a> </div>
                 </div>
                 <div class="col-xs-12 col-md-6 "> 
-                    <div class="boxitems"> <a href="batchs.html"><h1>Gestion de  batchs</h1></a>  </div>
+                    <div class="boxitems"> <a href="batchs.html"><h1>Batchs</h1></a>  </div>
                 </div>
             </div>
             
@@ -38,7 +38,7 @@ and open the template in the editor.
                     <div class ="boxitems"> <a href="profil.html"> <h1> Profil </h1></a> </div>
                 </div>
                 <div class="col-xs-12 col-md-6"> 
-                    <div class = "boxitems"><a href="aide.html"><h1>Comment utiliser l'application</h1> </a> </div>
+                    <div class = "boxitems"><a href="aide.html"><h1>Aide</h1> </a> </div>
                 </div>
             </div>
         </div>
